--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .vscode
 .DS_Store
 a.out
-competitive programming.xlsx
-~$competitive programming.xlsx
+competitive_programming.xlsx
+~$competitive_programming.xlsx
